--- a/index.html
+++ b/index.html
@@ -1,6 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"
         <meta charset="UTF-8">
         <title>Toon Portfolio</title>
         <link rel="style.css" href="./assets/css/style.css">
+    </head>
 </html>
+
+<body>
+    <header>
+        <h1>
+            <a href="/">Vincent's Landing</a>
+        </h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#about-me">About Me</a>
+                </li>
+                <li>
+                    <a href="#personal-work">Work</a>
+                </li>
+                <li>
+                    <a href="#my-resume">Resume</a>
+                </li>
+                <li>
+                    <a href="#fun-facts">Life Off Screen</a>
+                </li>
+                <li>
+                    <a href="#contact-info">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="hero">
+        <div class="hero-cta">
+            
+        </div>
+    </section>
+
+</body>
