--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"
         <meta charset="UTF-8">
-        <title>Toon Portfolio</title>
+        <title>Vincent's Landing</title>
         <link rel="style.css" href="./assets/css/style.css">
     </head>
 </html>
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>
-            <a href="/">Vincent's Landing</a>
+            <a href="/">Vincent Toon's Portfolio</a>
         </h1>
         <nav>
             <ul>
@@ -34,10 +34,40 @@
         </nav>
     </header>
 
+<!-- Hero Section -->
     <section class="hero">
         <div class="hero-cta">
-            
+            <div class="flex-row">
+                <h2>Everything so far.</h2>
+            </div>
         </div>
     </section>
+<!-- End Hero Section -->
 
+<!-- About Me Section -->
+    <section id="about-me" class="personal-info">
+        <div class="flex-row">
+            <h2 class="section-title primary-border">
+                About Me
+            </h2>
+        </div>
+        <!-- Image here -->
+        <div class="me-img">
+            <img src="*" alt="*">
+        </div>
+        <!-- About Me text -->
+        <div class="me-text">
+            <p>
+                Born and raised in Collinsville, IL, and now residing just a few towns over. I've worn many hats in the beer industry, but I aspire for change and this course is the first step out of that world for me in a long time. As an up and coming web developer, I don't have much to reference in terms of previous projects I have done online. However, this page is one of the first steps in my journey to web development. From crafting beer and cocktails to crafting the future of the web, onward and upwards!
+            </p>
+        </div>
+    </section>
+<!-- End About Me Section  -->
+
+<!-- Work Section -->
+    <section id="personal-work" class="working-web">
+        <h2 class="section-title primary-border">
+            Work
+        </h2>
+    </section>
 </body>
