--- a/index.html
+++ b/index.html
@@ -66,8 +66,37 @@
 
 <!-- Work Section -->
     <section id="personal-work" class="working-web">
-        <h2 class="section-title primary-border">
-            Work
-        </h2>
+        <div class="flex-row">
+            <h2 class="section-title primary-border">
+                Work
+            </h2>
+        </div>
+        <!-- Run Buddy -->
+        <div class="img-to-run-buddy">
+            <a href="https://vincenttoon.github.io/run-buddy-new/">
+            <img src="./assets/images/hero-bg.jpg" alt="runner tieing shoe">
+            <div class="run-buddy-text">Run Buddy</div>
+            <div class="lang-for-rb">Html/Css</div>
+            </a>
+        </div>
+        <!-- Horiseon -->
+        <div class="img-to-secondary">
+            <a href="https://vincenttoon.github.io/horiseon-zero-dawn/">
+            <img src="./assets/images/digital-marketing-meeting.jpg" alt="team members collaborating around table">
+            <div class="secondary-proj">Horiseon</div>
+            <div class="lang-for-sec">Html/Css</div>
+            </a>
+        </div>
+        <!-- Portfolio -->
+        <div class="img-to-secondary">
+            <a href="https://github.com/Vincenttoon/nacho-portfolio-supreme/">
+            <img src="./assets/images/Screen Shot 2022-07-24 at 1.57.29 PM.png" alt="portfolio homepage">
+            <div class="secondary-proj">Portfolio</div>
+            <div class="lang-for-sec">Html/Css</div>
+            </a>"
+        </div>
     </section>
+    <!-- End Work Section -->
+
+    
 </body>
