--- a/index.html
+++ b/index.html
@@ -98,5 +98,26 @@
     </section>
     <!-- End Work Section -->
 
-    
+    <!-- Resume -->
+    <section id="my-resume" class="documented-actions">
+        <div class="flex-row">
+            <h2 class="section-title primary border">
+                Resume
+            </h2>
+            <!-- Img here -->
+            <div class="grad-photo">
+                <img src="*" alt="graduation photo">
+            </div>
+            <!-- Resume here -->
+            <div class="me-text">
+                <p>
+                    Insert Resume Here
+                </p>
+            </div>
+        </div>
+    </section>
+    <!-- End Resume Section-->
+
+     <!-- Fun Facts Section -->
+     
 </body>
