--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
             <!-- Img here -->
         <div class="grad-photo">
-            <img src="*" alt="graduation photo">
+            <img src="./assets/images/grad_photo.jpg" alt="graduation photo">
         </div>
             <!-- Resume here -->
         <div class="me-text">
@@ -127,37 +127,48 @@
         </div>
 
         <div class="ff-img-1">
-            <img src="*" alt="Izzabeth Buttikiss">
+            <img src="./assets/images/Izzy_sleeping.jpg" alt="Izzabeth Buttikiss">
+            <p>
+                I have a dog named Izzy that I adopted in 2020. Coming home from work to her greeting me is one of my greatest pleasures. She loves cheese, walks and hanging with all her friends at Global Brew. She has gone from anxious wreck to absolute joy and I love spending time with her.
+            </p>
         </div>
-        <p>
-            I have a dog named Izzy that I adopted in 2020. Coming home from work to her greeting me is one of my greatest pleasures. She loves cheese, walks and hanging with all her friends at Global Brew. She has gone from anxious wreck to absolute joy and I love spending time with her.
-        </p>
 
         <div class="ff-img-2">
             <img src="*" alt="Me jamming on guitar">
+            <p>
+                Music has played a major part of my life since before I can even remember. I love making music in my downtime and was in a band in high school. The bond I made with my bandmates then is one of my greatest memories. To this day, playing music is my greatest source of peace and I love the connection you can create with people through music.
+            </p>
         </div>
-        <p>
-            Music has played a major part of my life since before I can even remember. I love making music in my downtime and was in a band in high school. The bond I made with my bandmates then is one of my greatest memories. To this day, playing music is my greatest source of peace and I love the connection you can create with people through music.
-        </p>
 
         <div class="ff-img-1">
-            <img src="*" alt="Me in the mountains">
+            <img src="./assets/images/mountain_man.jpg" alt="Me in the mountains">
+            <p>
+                When I travel, I love hitting the great outdoors. I've been camping and hiking all my life and I think it's incredibly important to stay grounded to mother earth. There's something blissful about seeing the world around you and, when given the chance, submerging myself in nature is a must.
+            </p>
         </div>
-        <p>
-            When I travel, I love hitting the great outdoors. I've been camping and hiking all my life and I think it's incredibly important to stay grounded to mother earth. There's something blissful about seeing the world around you and, when given the chance, submerging myself in nature is a must.
-        </p>
 
         <div class="ff-img-2">
-            <img src="*" alt="Of course, me with a beer">
+            <img src="./assets/images/red-stripe.jpg" alt="Of course, me with a beer">
+            <p>
+                Craft beer has been a passion of mine since the day I turned 21 and became bar manager the next day. I've taught classes and brewed beer at one of our local breweries. I'm also I certified beer server. While a portion about beer in a portfolio seems unprofessional, it is where I've spent my entire professional life so far and I will never forget the knowledge I have obtained, the amazing people I have met throughout the industry, the appreciation I have towards the fine craft of getting something write. Most importantly, I will always appreciate the memories made over a few beers, with friends and strangers alike. 
+            </p>
         </div>
-        <p>
-            Craft beer has been a passion of mine since the day I turned 21 and became bar manager the next day. I've taught classes and brewed beer at one of our local breweries. I'm also I certified beer server. While a portion about beer in a portfolio seems unprofessional, it is where I've spent my entire professional life so far and I will never forget the knowledge I have obtained, the amazing people I have met throughout the industry, the appreciation I have towards the fine craft of getting something write. Most importantly, I will always appreciate the memories made over a few beers, with friends and strangers alike. 
-        </p>
+
      </section>
      <!-- End Fun Facts Section -->
 
      <!-- Contact Section -->
      <section id="contact-info" class="reach-me">
-
+        <div class="flex-row">
+            <h2>
+                Contact info
+            </h2>
+        </div>
+        <address>
+            Phone: <a href="tel:618.972.9547">618.972.9547</a>
+            Email: <a href="mailto://vincenttoon22@gmail.com">vincenttoon22@gmail.com</a>
+            Github: <a href="https://github.com/Vincenttoon">Vincent Toon</a>
+        </address>
      </section>
+     <!-- End Contact Section -->
 </body>
