saving before deleting extras

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
             <!-- Image here -->
             <div class="me-img">
-                <img src="*" alt="*">
+                <img src="./assets/images/guitar_me.jpg" alt="me playing guitar">
             </div>
             <!-- About Me text -->
             <div class="me-text">
@@ -105,7 +105,7 @@
             </div>
                 <!-- Img here -->
             <div class="grad-photo">
-                <img src="./assets/images/grad_photo.jpg" alt="graduation photo">
+                <img src="./assets/imag" alt="graduation photo">
             </div>
                 <!-- Resume here -->
             <div class="me-text">
