working work section

--- a/index.html
+++ b/index.html
@@ -65,33 +65,27 @@
                     Work
                 </h2>
             </div>
-            <!-- Run Buddy -->
-            <div class="work-parent">
-                <div class="run-buddy shared-work">
-                    <a href="https://vincenttoon.github.io/run-buddy-new/">
-                        <div class="run-buddy-txt">
-                            <h4>Run Buddy</h4>
-                            <p>HTML/CSS</p>
-                        </div>
-                    </a>
-                </div>
-                
-                <div class="horiseon shared-work">
-                    <a href="https://vincenttoon.github.io/horiseon-zero-dawn/">
-                        <div class="horiseon-txt">
-                            <h4>Horiseon</h4>
-                            <p>HTML/CSS</p>
-                        </div>    
-                    </a>
+
+            <div class="live-links">
+                <div class="live-links-rb live-links-box">
+                    <button class="live-links-text">
+                        <a href="https://vincenttoon.github.io/run-buddy-new/">Run Buddy</a>
+                        <p> HTML & CSS</p>
+                    </button>
                 </div>
 
-                <div class="portfolio shared-work">
-                    <a href="https://github.com/Vincenttoon/nacho-portfolio-supreme/">
-                        <div class="portfolio-txt">
-                            <p>Portfolio</p>
-                            <p>HTML/CSS</p>
-                        </div>
-                    </a>
+                <div class="live-links-hori live-links-box">
+                    <button class="live-links-text">
+                        <a href="https://vincenttoon.github.io/horiseon-zero-dawn/">Horiseon</a>
+                        <p>HTML & CSS</p>
+                    </button>
+                </div>
+
+                <div class="live-links-port live-links-box">
+                    <button class="live-links-text">
+                        <a href="https://github.com/Vincenttoon/nacho-portfolio-supreme">My Portfolio</a>
+                        <p>HTML & CSS</p>
+                    </button>
                 </div>
             </div>
         </section>
