button fixed and placed

--- a/index.html
+++ b/index.html
@@ -71,26 +71,23 @@
             <!-- Run Buddy -->
             <div class="live-links">
                 <div class="live-links-rb live-links-box">
-                    <button class="live-links-text">
-                        <a href="https://vincenttoon.github.io/run-buddy-new/">Run Buddy</a>
-                        <p> HTML & CSS</p>
-                    </button>
+                    <div class="live-links-text working-web-maintext">
+                        <a href="https://vincenttoon.github.io/run-buddy-new/"><button>Run Buddy <br> HTML & CSS</button></a>
+                    </div>
                 </div>
 
                 <!-- Horiseon -->
                 <div class="live-links-hori live-links-box">
-                    <button class="live-links-text">
-                        <a href="https://vincenttoon.github.io/horiseon-zero-dawn/">Horiseon</a>
-                        <p>HTML & CSS</p>
-                    </button>
+                    <div class="live-links-text working-web-othertext">
+                        <a href="https://vincenttoon.github.io/horiseon-zero-dawn/"><button>Horiseon <br> HTML & CSS</button></a>
+                    </div>
                 </div>
 
                 <!-- Portfolio -->
                 <div class="live-links-port live-links-box">
-                    <button class="live-links-text">
-                        <a href="https://github.com/Vincenttoon/nacho-portfolio-supreme">My Portfolio</a>
-                        <p>HTML & CSS</p>
-                    </button>
+                    <div class="live-links-text working-web-othertext">
+                        <a href="https://github.com/Vincenttoon/nacho-portfolio-supreme"><button>My Portfolio <br> HTML & CSS</button></a>
+                    </div>
                 </div>
             </div>
         </section>
