media queries complete

--- a/index.html
+++ b/index.html
@@ -69,23 +69,23 @@
             </div>
 
             <!-- Run Buddy -->
-            <div class="live-links">
-                <div class="live-links-rb live-links-box">
-                    <div class="live-links-text working-web-maintext">
+            <div class="photo-link">
+                <div class="photo-link-rb photo-link-box">
+                    <div class="photo-link-text working-web-maintext">
                         <a href="https://vincenttoon.github.io/run-buddy-new/"><button>Run Buddy <br> HTML & CSS</button></a>
                     </div>
                 </div>
 
                 <!-- Horiseon -->
-                <div class="live-links-hori live-links-box">
-                    <div class="live-links-text working-web-othertext">
+                <div class="photo-link-hori photo-link-box">
+                    <div class="photo-link-text working-web-othertext">
                         <a href="https://vincenttoon.github.io/horiseon-zero-dawn/"><button>Horiseon <br> HTML & CSS</button></a>
                     </div>
                 </div>
 
                 <!-- Portfolio -->
-                <div class="live-links-port live-links-box">
-                    <div class="live-links-text working-web-othertext">
+                <div class="photo-link-port photo-link-box">
+                    <div class="photo-link-text working-web-othertext">
                         <a href="https://github.com/Vincenttoon/nacho-portfolio-supreme"><button>My Portfolio <br> HTML & CSS</button></a>
                     </div>
                 </div>
