image layout functioning sort of

--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
                 <h2 class="section-title-2 primary-border">
                     Work
                 </h2>
-            </div>
 
             <!-- Run Buddy -->
             <div class="photo-link">
@@ -89,6 +88,24 @@
             </div>
         </section>
         <!-- End Work Section -->
+
+        <!-- CAUTION:!!! IMAGE TESTING SECTION !!! -->
+
+        <section id="personal-work" class="working-web">
+            <h2 class="section-title-2 primary-border">
+                Work
+            </h2>
+        <section id="workk" class="worker-webs">
+
+            <div class="worker-webs-img">
+                <a href="https://vincenttoon.github.io/run-buddy-new/">
+                    <img src="./assets/images/hero-bg.jpg" alt="runner tying shoe" class="rb-img-working">
+                    <div class="runb-text">
+                        <h4 class="run">Run Buddy</h4><p class="run-p">HTML & CSS</p>
+                    </div>
+                </a>
+            </div>
+        </section>
     
          <!-- Contact Section -->
          <section id="contact-info" class="reach-me">
