this doesnt work

--- a/index.html
+++ b/index.html
@@ -95,17 +95,36 @@
             <h2 class="section-title-2 primary-border">
                 Work
             </h2>
-        <section id="workk" class="worker-webs">
+            
+            <div class="worker-webs">
 
-            <div class="worker-webs-img">
-                <a href="https://vincenttoon.github.io/run-buddy-new/">
-                    <img src="./assets/images/hero-bg.jpg" alt="runner tying shoe" class="rb-img-working">
-                    <div class="runb-text">
-                        <h4 class="run">Run Buddy</h4><p class="run-p">HTML & CSS</p>
-                    </div>
-                </a>
+                <div class="worker-webs-img">
+                    <a href="https://vincenttoon.github.io/run-buddy-new/">
+                        <img src="./assets/images/hero-bg.jpg" alt="runner tying shoe" class="rb-img-working working-box">
+                        <div class="runb-text">
+                            <h4 class="run">Run Buddy</h4><p class="run-p">HTML & CSS</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="worker-webs-img">
+                    <a href="https://vincenttoon.github.io/horiseon-zero-dawn/">
+                        <img src="./assets/images/digital-marketing-meeting.jpg" alt="digital marketing team meeting at table" class="hori-img-working working-box">
+                        <div class="hori-text">
+                            <h4 class="hori">Run Buddy</h4><p class="hori-p">HTML & CSS</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="worker-webs-img">
+                    <a href="https://github.com/Vincenttoon/nacho-portfolio-supreme">
+                        <img src="./assets/images/guitar_me.jpg" alt="me shredding strings" class="port-img-working working-box">
+                        <div class="port-text">
+                            <h4 class="port">Run Buddy</h4><p class="port-p">HTML & CSS</p>
+                        </div>
+                    </a>
+                </div>
             </div>
-        </section>
     
          <!-- Contact Section -->
          <section id="contact-info" class="reach-me">
