--- a/index.html
+++ b/index.html
@@ -110,18 +110,18 @@
 
                 <div class="worker-webs-img">
                     <a href="https://vincenttoon.github.io/horiseon-zero-dawn/">
-                        <img src="./assets/images/digital-marketing-meeting400.jpg" alt="digital marketing team meeting at table" class="hori-img-working working-box">
-                        <div class="hori-text">
-                            <h4 class="hori">Run Buddy</h4><p class="hori-p">HTML & CSS</p>
+                        <img src="./assets/images/digital-marketing-meeting400.jpg" alt="digital marketing team meeting at table" class="secondary-img-working working-box">
+                        <div class="secondary-text">
+                            <h4 class="hori">Horiseon</h4><p class="hori-p">HTML & CSS</p>
                         </div>
                     </a>
                 </div>
 
                 <div class="worker-webs-img">
                     <a href="https://github.com/Vincenttoon/nacho-portfolio-supreme">
-                        <img src="./assets/images/guitar_me400.jpg" alt="me shredding strings" class="port-img-working working-box">
-                        <div class="port-text">
-                            <h4 class="port">Run Buddy</h4><p class="port-p">HTML & CSS</p>
+                        <img src="./assets/images/guitar_me400.jpg" alt="me shredding strings" class="secondary-img-working working-box">
+                        <div class="secondary-text">
+                            <h4 class="port">My Portfolio</h4><p class="port-p">HTML & CSS</p>
                         </div>
                     </a>
                 </div>
