Find your brew added

--- a/index.html
+++ b/index.html
@@ -67,9 +67,18 @@
             <div class="worker-webs">
 
                 <div class="worker-webs-img">
+                    <a href="https://vincenttoon.github.io/brewery-finder/">
+                        <img src="./assets/images/post-search.png" alt="Find your Brew Homescreen" class="rb-img-working working-box">
+                        <div class="fyb-text">
+                            <h4>Find Your Brew</h4><p>HTML, CSS, JS, Jquery, Bulma</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="worker-webs-img">
                     <a href="https://vincenttoon.github.io/run-buddy-new/">
-                        <img src="./assets/images/hero-bg.jpg" alt="runner tying shoe" class="rb-img-working working-box">
-                        <div class="runb-text">
+                        <img src="./assets/images/hero-bg.jpg" alt="runner tying shoe" class="secondary-img-working working-box">
+                        <div class="secondary-text">
                             <h4>Run Buddy</h4><p>HTML & CSS</p>
                         </div>
                     </a>
