about me updated

--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
                     <h2 class="section-title-2 primary-border">
                         About Me
                     </h2>
+                    <h3 class="section-title-3 primary-border">
+                        Full Stack Web Developer
+                    </h3>
+                    <h4 class="section-title-4 primary-border">Languages/Skills:</h4>
+                    <p class="skills">HTML, CSS, JS, JQuery, Moment, Bootstrap, Third Party API's, Node.js, OOP, Jest, Express, MySql</p>
                     <p>
                         Born and raised in Collinsville, IL. Spent my entire adult life working in the beer industry. I've been a bartender, bar manager, brewery representative, sales for distribution and even brewed a little beer. I've made a million memories over the years and have learned so much along the way.
-                    </p>
-                    <br>
-                    <p>
-                        Alas, it is time for a change. I don't have much experience coding, but I did take a few data analysis courses in college that gave me a slight understanding in some of the practices behind it.
                     </p>
                     <br>
                     <p>
