--- a/challenges.html
+++ b/challenges.html
@@ -29,9 +29,9 @@
             </nav>
         </header>
 
-        <section id="more-projects" class="working-web">
-            <div class="d-flex flex-wrap justify-content-center">
-                <div class="worker-webs-img col-3">
+        <section id="more-projects" class="working-web d-flex flex-wrap">
+            <div class="d-flex flex-wrap justify-content-center column">
+                <div class="worker-webs-img col-12 col-md-5 col-lg-3">
                     <a href="https://github.com/Vincenttoon/note-taker-dream-maker">
                         <img src="./assets/images/Note-page.jpg" alt="Note Taking functioning" class="challenge-img-working working-box">
                         <div class="challenge-text-2">
@@ -39,7 +39,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="worker-webs-img col-3">
+                <div class="worker-webs-img col-12 col-md-5 col-lg-3"">
                     <a href="https://github.com/Vincenttoon/team-building-exercise">
                         <img src="./assets/images/Results.jpg" alt="Team Builder Output" class="challenge-img-working working-box">
                         <div class="challenge-text-2">
@@ -47,7 +47,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="worker-webs-img col-3">
+                <div class="worker-webs-img col-12 col-md-5 col-lg-3"">
                     <a href="https://github.com/Vincenttoon/read-for-me">
                         <img src="./assets/images/read-me-output.jpg" alt="ReadMe Generator functioning" class="challenge-img-working working-box">
                         <div class="challenge-text">
@@ -55,7 +55,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="worker-webs-img col-3">
+                <div class="worker-webs-img col-12 col-md-5 col-lg-3"">
                     <a href="https://github.com/Vincenttoon/five-day-weather">
                         <img src="./assets/images/function-screen.jpg" alt="Weather App home page" class="challenge-img-working working-box">
                         <div class="challenge-text-2">
@@ -63,7 +63,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="worker-webs-img col-3">
+                <div class="worker-webs-img col-12 col-md-5 col-lg-3"">
                     <a href="https://github.com/Vincenttoon/daily-scheduler">
                         <img src="./assets/images/top-page.jpg" alt="workday home page" class="challenge-img-working working-box">
                         <div class="challenge-text-2">
@@ -71,7 +71,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="worker-webs-img col-3">
+                <div class="worker-webs-img col-12 col-md-5 col-lg-3"">
                     <a href="https://github.com/Vincenttoon/java-quiz-lord">
                         <img src="./assets/images/home-screen.jpg" alt="java quiz home page" class="challenge-img-working working-box">
                         <div class="challenge-text-2">
@@ -79,7 +79,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="worker-webs-img col-3">
+                <div class="worker-webs-img col-12 col-md-5 col-lg-3"">
                     <a href="https://github.com/Vincenttoon/super-password-generator">
                         <img src="./assets/images/password-home.png" alt="password generator home page" class="challenge-img-working working-box">
                         <div class="challenge-text-2">
@@ -87,7 +87,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="worker-webs-img col-3">
+                <div class="worker-webs-img col-12 col-md-5 col-lg-3"">
                     <a href="https://vincenttoon.github.io/nacho-portfolio-supreme/">
                         <img src="./assets/images/guitar_me400.jpg" alt="me shredding strings" class="challenge-img-working working-box">
                         <div class="challenge-text">
@@ -95,7 +95,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="worker-webs-img col-3">
+                <div class="worker-webs-img col-12 col-md-5 col-lg-3"">
                     <a href="https://github.com/Vincenttoon/horiseon-zero-dawn">
                         <img src="./assets/images/digital-marketing-meeting400.jpg" alt="me shredding strings" class="challenge-img-working working-box">
                         <div class="challenge-text">
@@ -106,13 +106,13 @@
             </div>
         </section>
 
-        <section id="contact-info" class="reach-me d-flex flex-wrap">
+        <section id="contact-info" class="reach-me">
             <h2>
                 Contact Info:
             </h2>
         </div>
-        <div class="d-flex justify-content-between">
-            <address class="d-flex justify-content-between">
+        <div class="d-flex justify-content-around">
+            <address class="">
                 <i class="fas fa-solid fa-phone"></i>  <a href="tel:618.972.9547"> 618.972.9547</a>
                 <i class="fas fa-solid fa-envelope"></i> <a href="mailto://vincenttoon22@gmail.com">vincenttoon22@gmail.com</a>
                 <i class="fab fa-github"></i> <a href="https://github.com/Vincenttoon">Vincent Toon</a>
