--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <h2 class="text-center">Project Titles</h2>
                     </div> -->
                     <div class="d-flex flex-wrap justify-content-center">
-                        <div class="worker-webs-img col-3">
+                        <div class="worker-webs-img col-12 col-md-5 col-lg-3"">
                             <a href="./challenges.html">
                                 <img src="./assets/images/working-ani.jpg" alt="digital marketing team meeting at table" class="secondary-img-working working-box">
                                 <div class="secondary-text">
@@ -103,7 +103,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="worker-webs-img col-3">
+                        <div class="worker-webs-img col-12 col-md-5 col-lg-3"">
                             <a href="./modules.html">
                                 <img src="./assets/images/wash-u-text.jpg" alt="Wash U Seal" class="secondary-img-working working-box">
                                 <div class="secondary-wash-text">
