deployed links updated

--- a/challenges.html
+++ b/challenges.html
@@ -32,10 +32,10 @@
         <section id="more-projects" class="working-web d-flex flex-wrap">
             <div class="d-flex flex-wrap justify-content-center column">
                 <div class="worker-webs-img col-12 col-md-5 col-lg-3">
-                    <a href="https://github.com/Vincenttoon/note-taker-dream-maker">
+                    <a href="https://note-taker-dream-maker-205.herokuapp.com/">
                         <img src="./assets/images/Note-page.jpg" alt="Note Taking functioning" class="challenge-img-working working-box">
                         <div class="challenge-text-2">
-                            <h6>Challenge #12</h6><h4>Note Taker</h4><p>Express.js</p>
+                            <h6>Challenge #11</h6><h4>Note Taker</h4><p>Express.js</p>
                         </div>
                     </a>
                 </div>
@@ -56,7 +56,7 @@
                     </a>
                 </div>
                 <div class="worker-webs-img col-12 col-md-5 col-lg-3"">
-                    <a href="https://github.com/Vincenttoon/five-day-weather">
+                    <a href="https://vincenttoon.github.io/five-day-weather/">
                         <img src="./assets/images/function-screen.jpg" alt="Weather App home page" class="challenge-img-working working-box">
                         <div class="challenge-text-2">
                             <h6>Challenge #6</h6><h4>Weather App</h4><p>Third Party API's</p>
@@ -64,7 +64,7 @@
                     </a>
                 </div>
                 <div class="worker-webs-img col-12 col-md-5 col-lg-3"">
-                    <a href="https://github.com/Vincenttoon/daily-scheduler">
+                    <a href="https://vincenttoon.github.io/daily-scheduler/">
                         <img src="./assets/images/top-page.jpg" alt="workday home page" class="challenge-img-working working-box">
                         <div class="challenge-text-2">
                             <h6>Challenge #5</h6><h4>Work Day Scheduler</h4><p>Moment.js, Bootstrap</p>
@@ -72,7 +72,7 @@
                     </a>
                 </div>
                 <div class="worker-webs-img col-12 col-md-5 col-lg-3"">
-                    <a href="https://github.com/Vincenttoon/java-quiz-lord">
+                    <a href="https://vincenttoon.github.io/java-quiz-lord/">
                         <img src="./assets/images/home-screen.jpg" alt="java quiz home page" class="challenge-img-working working-box">
                         <div class="challenge-text-2">
                             <h6>Challenge #4</h6><h4>Java Quiz</h4><p>Jquery, JS</p>
@@ -80,7 +80,7 @@
                     </a>
                 </div>
                 <div class="worker-webs-img col-12 col-md-5 col-lg-3"">
-                    <a href="https://github.com/Vincenttoon/super-password-generator">
+                    <a href="https://vincenttoon.github.io/super-password-generator/">
                         <img src="./assets/images/password-home.png" alt="password generator home page" class="challenge-img-working working-box">
                         <div class="challenge-text-2">
                             <h6>Challenge #3</h6><h4>Password Generator</h4><p>JS, CSS, HTML</p>
@@ -96,7 +96,7 @@
                     </a>
                 </div>
                 <div class="worker-webs-img col-12 col-md-5 col-lg-3"">
-                    <a href="https://github.com/Vincenttoon/horiseon-zero-dawn">
+                    <a href="https://vincenttoon.github.io/horiseon-zero-dawn/">
                         <img src="./assets/images/digital-marketing-meeting400.jpg" alt="me shredding strings" class="challenge-img-working working-box">
                         <div class="challenge-text">
                             <h6>Challenge #1</h6><h4>Horieson</h4><p>HTML & CSS</p>
