--- a/index.html
+++ b/index.html
@@ -84,6 +84,17 @@
                     </div>
                 </div>
 
+                <div class="d-flex flex-wrap flex-column">
+                    <div class="worker-webs-img d-flex flex-wrap">
+                        <a href="https://github.com/JayWhiteBuffalo/Rise2Challenge">
+                            <img src="./assets/images/rise2challenge.jpg" alt="Rise2Challenge workout screen" class="rb-img-working working-box">
+                            <div class="fyb-text">
+                                <h4>Rise2Challenge</h4><p>Fullstack MERN</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+
         </section>
 
         <section id="more-projects" class="working-web">
