--- a/challenges.html
+++ b/challenges.html
@@ -32,6 +32,38 @@
         <section id="more-projects" class="working-web d-flex flex-wrap">
             <div class="d-flex flex-wrap justify-content-center column">
                 <div class="worker-webs-img col-12 col-md-5 col-lg-3">
+                    <a href="https://gist.github.com/Vincenttoon/1f10293586cd92f5e5d040f28c1f4686#quantifiers">
+                        <img src="./assets/images/email.jpg" alt="Hand holding email" class="challenge-img-working working-box">
+                        <div class="challenge-text-2">
+                            <h6>Challenge #17</h6><h4>Email Validator Gist</h4><p>Computer Science</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="worker-webs-img col-12 col-md-5 col-lg-3">
+                    <a href="https://arcane-lake-94279.herokuapp.com/dashboard/">
+                        <img src="./assets/images/homepage.jpg" alt="Tech Blog Homepage" class="challenge-img-working working-box">
+                        <div class="challenge-text">
+                            <h6>Challenge #14</h6><h4>Tech Blog</h4><p>MVC</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="worker-webs-img col-12 col-md-5 col-lg-3">
+                    <a href="https://github.com/Vincenttoon/ecommerce-back-end">
+                        <img src="./assets/images/ecom-img.jpg" alt="Ecom img" class="challenge-img-working working-box">
+                        <div class="challenge-text">
+                            <h6>Challenge #13</h6><h4>E-Commerce BackEnd</h4><p>ORM</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="worker-webs-img col-12 col-md-5 col-lg-3">
+                    <a href="https://note-taker-dream-maker-205.herokuapp.com/">
+                        <img src="./assets/images/employee.jpg" alt="Employees around desk" class="challenge-img-working working-box">
+                        <div class="challenge-text-2">
+                            <h6>Challenge #12</h6><h4>Employee Tracker</h4><p>MySQL</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="worker-webs-img col-12 col-md-5 col-lg-3">
                     <a href="https://note-taker-dream-maker-205.herokuapp.com/">
                         <img src="./assets/images/Note-page.jpg" alt="Note Taking functioning" class="challenge-img-working working-box">
                         <div class="challenge-text-2">
