--- a/modules.html
+++ b/modules.html
@@ -31,7 +31,23 @@
 
         <section id="more-projects" class="working-web">
             <div class="d-flex flex-wrap justify-content-center">
-                <div class="worker-webs-img col-12 col-md-5 col-lg-3"">
+                <div class="worker-webs-img col-12 col-md-5 col-lg-3">
+                    <a href="https://morning-everglades-87630.herokuapp.com/">
+                        <img src="./assets/images/pizza-hunt.jpg" alt="Pizza Hunt Home Page" class="challenge-img-working working-box">
+                        <div class="challenge-text-2">
+                            <h6>Module #18</h6><h4>Pizza Hunt</h4><p>MongoDb</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="worker-webs-img col-12 col-md-5 col-lg-3">
+                    <a href="https://github.com/Vincenttoon/just-tech-news">
+                        <img src="./assets/images/news.jpg" alt="News room globe" class="challenge-img-working working-box">
+                        <div class="challenge-text">
+                            <h6>Module #13-14</h6><h4>Just Tech News</h4><p>ORM & MVC</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="worker-webs-img col-12 col-md-5 col-lg-3">
                     <a href="https://github.com/Vincenttoon/u-develop-it">
                         <img src="./assets/images/vote.jpg" alt="Vote being cast" class="challenge-img-working working-box">
                         <div class="challenge-text-2">
@@ -39,7 +55,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="worker-webs-img col-12 col-md-5 col-lg-3"">
+                <div class="worker-webs-img col-12 col-md-5 col-lg-3">
                     <a href="https://github.com/Vincenttoon/zoo-keeper-of-the-crypt">
                         <img src="./assets/images/zookeeper.jpg" alt="Zookeeper Title" class="challenge-img-working working-box">
                         <div class="challenge-text">
@@ -47,7 +63,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="worker-webs-img col-12 col-md-5 col-lg-3"">
+                <div class="worker-webs-img col-12 col-md-5 col-lg-3">
                     <a href="https://github.com/Vincenttoon/jest-another-RPG">
                         <img src="./assets/images/jest-rpg.jp.jpeg" alt="Female Warrior" class="challenge-img-working working-box">
                         <div class="challenge-text-2">
@@ -55,7 +71,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="worker-webs-img col-12 col-md-5 col-lg-3"">
+                <div class="worker-webs-img col-12 col-md-5 col-lg-3">
                     <a href="https://github.com/Vincenttoon/portfolio-generator">
                         <img src="./assets/images/port-gen.jpg" alt="Portfolio Generator Homescreen" class="challenge-img-working working-box">
                         <div class="challenge-text">
@@ -63,7 +79,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="worker-webs-img col-12 col-md-5 col-lg-3"">
+                <div class="worker-webs-img col-12 col-md-5 col-lg-3">
                     <a href="https://github.com/Vincenttoon/git-it-done">
                         <img src="./assets/images/gid.jpg" alt="Git it done home page" class="challenge-img-working working-box">
                         <div class="challenge-text">
@@ -71,7 +87,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="worker-webs-img col-12 col-md-5 col-lg-3"">
+                <div class="worker-webs-img col-12 col-md-5 col-lg-3">
                     <a href="https://github.com/Vincenttoon/taskmaster-pro">
                         <img src="./assets/images/tmpro.jpg" alt="TM Pro homepage" class="challenge-img-working working-box">
                         <div class="challenge-text">
@@ -79,7 +95,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="worker-webs-img col-12 col-md-5 col-lg-3"">
+                <div class="worker-webs-img col-12 col-md-5 col-lg-3">
                     <a href="https://github.com/Vincenttoon/taskinator">
                         <img src="./assets/images/taskinator-home.jpg" alt="Taskinator home page" class="challenge-img-working working-box">
                         <div class="challenge-text-2">
@@ -87,7 +103,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="worker-webs-img col-12 col-md-5 col-lg-3"">
+                <div class="worker-webs-img col-12 col-md-5 col-lg-3">
                     <a href="https://github.com/Vincenttoon/robot-gladiators">
                         <img src="./assets/images/robot-gladiators.jpg" alt="robots fighting" class="challenge-img-working working-box">
                         <div class="challenge-text-2">
@@ -95,7 +111,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="worker-webs-img col-12 col-md-5 col-lg-3"">
+                <div class="worker-webs-img col-12 col-md-5 col-lg-3">
                     <a href="https://github.com/Vincenttoon/run-buddy-new">
                         <img src="./assets/images/hero-bg.jpg" alt="Run Buddy hero" class="challenge-img-working working-box">
                         <div class="challenge-text">
